fix overflow and margin

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  /*padding-top: 50px;*/
+  padding-top: 0px;
   padding-bottom: 20px;
 }
 
@@ -188,11 +188,11 @@ td > p {
   content: "# ";
 }
 
-/* Homepage refresh June 2018
+/* Homepage refresh June 2018*/
 .container-hp {
-  margin: 0 15px;
+  margin: 0 0;
   padding: 0;
-} */
+}
 
 .sidekick-copy * {
   font-family: 'HelveticaNeue-Bold','Open sans', Arial, sans-serif ;
@@ -211,7 +211,7 @@ td > p {
   font-family: "HelveticaNeue", "Open sans", Arial, sans-serif;
 }
 
-#connect {
+.container-hp #connect {
   background-color: #9aca3c;
 }
 
@@ -280,10 +280,9 @@ a.img-link {
 }
 
 @media screen and (max-width: 767px) {
-  /*.container-hp {
-    margin-top: -40px;
+  .container-hp {
     line-height: 1.75;
-  }*/
+  }
 
   .flex {
     flex-direction: column;
@@ -293,12 +292,16 @@ a.img-link {
   #connect.flex {
     flex-direction: column-reverse;
   }
+
+  .hero {
+    background-color: #325f74;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  /*.container-hp {
-    margin-top: 20px;
-  }*/
+  .container-hp {
+    margin-top: 0;
+  }
 
   .flex {
     flex-direction: row;
@@ -310,28 +313,36 @@ a.img-link {
   }
 
   .sidekick {
-    /*padding: 25px 0;*/
+    padding: 25px 0;
+  }
+
+  .hero {
+    background-color: #325f74;
   }
 }
 
 @media screen and (min-width: 992px) {
-  /*.container-hp {
-    margin-top: -30px;
-  }*/
+  .container-hp {
+    margin-top: 0;
+  }
 
   .sidekick {
-    /*padding: 50px 0;*/
+    padding: 50px 0;
+  }
+
+  .hero {
+    background-color: #325f74;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  /*.container-hp {
-    margin-top: -40px;
-  }*/
+  .container-hp {
+    margin-top: 0;
+  }
 
-  /*.container-hp #learn {
+  .container-hp #learn {
     margin-bottom: 10px;
-  }*/
+  }
 
   .hero {
     background-color: #325f74;
@@ -354,8 +365,8 @@ a.img-link {
     margin-top: .5em;
   }
 
-  #learn, #connect,
-  #integrate, #open-source {
+  .container-hp #learn, .container-hp #connect,
+  .container-hp #integrate, .container-hp #open-source {
     height: 400px;
   }
 
